FIX: Fixed issue with file extension shifting when dragging resources [t32190]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@20706 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -459,7 +459,6 @@ a:hover .fa,.fa:hover {text-decoration:none !important;} /* Never underline a Fo
 .DESC {display: inline;padding-right: 10px;}
 
 .thumbs-file-extension {
-    display: inline-block;
     font-weight: 600;
     background: #ffffffcc;
     border-radius: 3px;
@@ -467,6 +466,7 @@ a:hover .fa,.fa:hover {text-decoration:none !important;} /* Never underline a Fo
     padding: 3px 4px 1px 4px;
     margin: 3px;
     cursor: default;
+    float: left;
 }
 
 /*Resource Panel layout*/
